<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <ImageView
            android:id="@+id/imageViewCity"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iv_city"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/dummy" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@+id/imageViewCity"
            tools:layout_editor_absoluteX="15dp">
            <!--android:background="#7000">-->

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:shadowColor="#000"
                android:shadowDx="-2"
                android:shadowDy="-2"
                android:shadowRadius="6"
                android:text="@string/tv_placeholder"
                android:textColor="#FFF"
                android:textSize="42sp"
                android:textStyle="bold" />

        </LinearLayout>


        <TextView
            android:id="@+id/textViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            android:text="@string/tv_description"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCity"
            tools:layout_editor_absoluteX="15dp" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/textViewDesc"
            tools:layout_editor_absoluteX="15dp" />

        <ImageView
            android:id="@+id/imageViewStar"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/iv_icon_star"
            app:layout_constraintEnd_toStartOf="@+id/textViewScore"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:srcCompat="@drawable/ic_baseline_stars_24"
            app:tint="#FFC107" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/tv_score"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewStar"
            app:layout_constraintStart_toEndOf="@+id/imageViewStar"
            app:layout_constraintTop_toTopOf="@+id/imageViewStar" />

        <ImageView
            android:id="@+id/imageViewDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:backgroundTintMode="add"
            android:contentDescription="@string/iv_icon_delete"
            app:layout_constraintBottom_toBottomOf="@+id/textViewScore"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewScore"
            app:srcCompat="@drawable/ic_baseline_delete_24"
            app:tint="#F44336" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>